--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URI="uri to atlast db instance"
+DATABASE_URI="mongodb+srv://admin:mathews@cluster0.xwm2m.mongodb.net/mathews_db?retryWrites=true&w=majorityz"
